--- a/Programs-Asset-system-tow.html
+++ b/Programs-Asset-system-tow.html
@@ -139,7 +139,7 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/Assets/Assets-1.png" alt="Assets">
                         تسجيل شامل للمعدات والشاحنات
                         <p>
                           نظام مرن لتسجيل كافة بيانات المعدات والشاحنات، بما
@@ -147,7 +147,7 @@
                         </p>
                       </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/Electronicinvoices.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/Assets/Assets-2.png" alt="Assets">
                         بيانات كارت التشغيل
                         <p>
                           إنشاء بطاقات تشغيل تحتوي على جميع التفاصيل التشغيلية لكل
@@ -156,14 +156,14 @@
                         </p>
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/Assets/Assets-3.png" alt="Assets">
                         إدارة السائقين والمستخدمين  
                         <p>
                           تتبع بيانات السائقين وربطهم بالأصول المشغK لة لتحقيق التنظيم
                         </p>    
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/sale-system.webp" alt="ripet">
+                        <img class="img-repet"  src="./assets/Asset-system/icon/Assets/Assets-4.png" alt="Assets">
                         التأمين وإدارة التفويض
                         <p>
                           تتبع التأمينات وإدارة التفويضات لتبسيط الإجراءات وضمان الامتثال
@@ -189,7 +189,8 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/Financial/Financial-1.png" alt="Financial systems
+                        ">
                         ربط كامل مع نظامerp
                         <p>
                           الربط السلس مع أنظمةERP    الخاصة بالشركة لتمكين عمليات
@@ -198,7 +199,7 @@
                         </p>
                       </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/Electronicinvoices.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/Financial/Financial-2.png" alt="Financial systems ">
                         احتساب الإهلاك بدقة
                         <p>
                           احتساب الإهلاًك التلقائي للأصول بناء( على العمر، الاستخدام، أو طرق
@@ -227,7 +228,7 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/valuation/valuation-1.png" alt="valuation">
                         تتبع الموقع وتنقلات الأصول
                         <p>
                           باستخدام تقنيةGPS     ، يمكنك متابعة مواقع أصولك وتحليل
@@ -236,7 +237,7 @@
                         </p>
                       </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/Electronicinvoices.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/valuation/valuation-2.png" alt="valuation">
                         إدارة دورة حياة الأصول
                         <p>
                           تغطي دورة حياة الأصول من الشراء والتشغيل إلى البيع أو الشطب     
@@ -244,7 +245,8 @@
                         </p>
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/valuation/valuation-3.png" alt="valuation">
+
                         إعادة التقييم والجرد 
                         <p>
                           سهولة تنفيذ عمليات الجرد وإعادة تقييم الأصول حسب تغيرات السوق أو
@@ -253,7 +255,7 @@
                         </p>    
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/sale-system.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/valuation/valuation-4.png" alt="valuation">
                         إدارة الأصول غير الملموسة
                         <p>
                           تسجيل وإدارة حقوق الملكية الفكرية والتراخيص والأصول
@@ -281,7 +283,7 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/task-management/management-1.png" alt="management-1">
                         الصيانة الوقائية والدورية
                         <p>
                           جدولة الفحوصات الدورية وتنفيذ الفحص الوقائي لتقليل الأعطال
@@ -289,14 +291,15 @@
                         </p>
                       </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/Electronicinvoices.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/task-management/management-2.png" alt="management-1">
                         إدارة فرق الصيانة والمهام
                         <p>
                           تنظيم الفرق الداخلية والخارجية وتوزيع المهام بفاعلية                      
                         </p>
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/task-management/management-3.png" alt="management-1">
+
                         طلبات الصيانة وأوامر العمل
                         <p>
                           معالجة الطلبات وتحويلها إلى أوامر عمل مخصصة لضمان
@@ -304,7 +307,8 @@
                         </p>    
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/sale-system.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/task-management/management-4.png" alt="management-1">
+
                         متابعة قطع الغيار والزيوت
                         <p>
                           تتبع تغيير الإطارات والزيوت وجدولة تبديلها لضمان الأداء المثالي    
@@ -331,7 +335,7 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/decision-making/تقارير مالية وفنية متكاملة.png" alt="decision making">
                         تقارير مالية وفنية متكاملة
                         <p>
                           تقديم تقارير تحليلية شاملة تشمل الأداء الفني والتكاليف
@@ -339,14 +343,15 @@
                         </p>
                       </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/Electronicinvoices.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/decision-making/مقارنات الأداء.png" alt="decision making">
+
                         مقارنات الأداء
                         <p>
                           إجراء مقارنة بين أصول مختلفة لتحديد الأداء الأفضل وتوجيه القرارات                     
                         </p>
                         </li>
                       <li class="mb-2 p-decerption"> 
-                        <img class="img-repet" src="./assets/img/icon/management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/decision-making/إدارة المصاريف.png" alt="decision making">
                         إدارة المصاريف
                         <p>
                           تتبع التكاليف التشغيلية والصيانة لتحليل العائد على الاستثمار
@@ -373,7 +378,7 @@
                     <div class="mt-4">
                      <ul>
                       <li class="mb-2 p-decerption">
-                        <img class="img-repet" src="./assets/img/icon/Property Management.webp" alt="ripet">
+                        <img class="img-repet" src="./assets/Asset-system/icon/application/application-1.png" alt="application">
                         تطبيق مخصص
                         <p>
                           تطبيق ذكي يتيح للفنيين والمشغلين متابعة وتنفيذ المهام بسهولة من أي مكان
