--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
      <link href="assets/img/LOGO.png"  rel="shortcut icon"/>
      <title> أنظمة رايتو المحاسبية - Raito ERP systems</title>
      <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
-     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-     <link href="./assets/font/font-awesome/css/all.css" rel="stylesheet">
-     <link href="./assets/css/style.css" rel="stylesheet"  media="print" onload="this.media='all'">
+     <noscript><link href="./assets/css/bootstrap.min.css" rel="stylesheet"></noscript>
+
+     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" >
+     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" >
+     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" >
+     <link href="./assets/font/font-awesome/css/all.css" rel="stylesheet" >
+     <link href="./assets/css/style.css" rel="stylesheet" >
      <link href="./assets/css/style-en.css" rel="stylesheet">
-     <noscript><link rel="stylesheet" href="assets/css/style.css"></noscript>
+   
      <style>
       .compoent-price-hadder {
       position: fixed;
@@ -238,7 +240,7 @@
                       <!-- -11-9-2024-->
 
 
-            <div class="carousel-item">
+            <div class="carousel-item active">
               <div class="img-slider">
                 <img src="./assets/img/hadeer-top.jpg" class="d-block w-100" alt="slider" loading="lazy">
                 <div class="overlay"></div>
@@ -787,7 +789,7 @@
       </div>
      </section>
     <!--custumer-img-->
-    <section class="component-custemer mt-5 pb-5">
+    <section class="component-custemer mt-5 pb-5" role="region" aria-labelledby="customer-title">
       <div class="text-center">
         <h2 class="title-title">    أهم عملائنا </h2>
   
@@ -846,7 +848,7 @@
   
       </div>
       <div class="slider-reviews pt-5">
-        <div id="carouselExampleIndicators" class="carousel slide custemer-reviews" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" >
          
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -1252,10 +1254,10 @@
   </div>
 </div>
        <!--advertisements-->
-     <script src="./assets/js/jquery.js"async defer></script>
-     <script src="assets/js/owl.carousel.min.js"async defer></script>
-     <script src="./assets/js/bootstrap.bundle.min.js"async defer></script>
-     <script src="https://unpkg.com/aos@next/dist/aos.js"async defer></script>
-     <script src="./assets/js/loade.js"async defer></script>
+     <script src="./assets/js/jquery.js" ></script>
+     <script src="assets/js/owl.carousel.min.js"async ></script>
+     <script src="./assets/js/bootstrap.bundle.min.js" async></script>
+     <script src="https://unpkg.com/aos@next/dist/aos.js" ></script>
+     <script src="./assets/js/loade.js" ></script>
      </body>
 </html>
