--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
      <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
      <noscript><link href="./assets/css/bootstrap.min.css" rel="stylesheet"></noscript>
 
-     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" >
+     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" rel="stylesheet" media="print" onload="this.media='all'">
      <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" >
-     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" >
+     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet" media="print" onload="this.media='all'">
+     <noscript>
+      <link href="https://raitotec.com/css/owl.carousel.min.css" rel="stylesheet">
+      <link href="https://unpkg.com/dist/aos.css" rel="stylesheet">
+  </noscript>
      <link href="./assets/font/font-awesome/css/all.css" rel="stylesheet" >
      <link href="./assets/css/style.css" rel="stylesheet" >
      <link href="./assets/css/style-en.css" rel="stylesheet">
