--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
             <div class="carousel-item active">
               <div class="img-slider">
-                <img src="./assets/img/hadeer-top.jpg" class="d-block w-100" alt="slider" loading="lazy">
+                <img src="./assets/img/1.webp" class="d-block w-100" alt="slider" loading="lazy">
                 <div class="overlay"></div>
               </div>
               
