--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <meta property="og:image" content="assets/img/LOGO.png"/>
      <link href="assets/img/LOGO.png"  rel="shortcut icon"/>
      <title> أنظمة رايتو المحاسبية - Raito ERP systems</title>
-     <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
+     <link href="./assets/css/bootstrap.min.css"  rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
      <noscript><link href="./assets/css/bootstrap.min.css" rel="stylesheet"></noscript>
 
      <link rel="stylesheet" href="assets/css/owl.carousel.min.css" rel="stylesheet" media="print" onload="this.media='all'">
