--- a/Programs-Asset-system-tow.html
+++ b/Programs-Asset-system-tow.html
@@ -128,11 +128,11 @@
             المزايا الرئيسية للنظام
           </h2>
           <div class="component-programs pt-5 pb-5">
-            <div class="pattern">
-              <img src="assets/Asset-system/pngwing.png"alt="patern">
+            <div class="pattern pattern-top">
+              <img src="assets/Asset-system/pngwing.com.png"alt="patern" loading="lazy">
            </div>
            <div class="pattern pattern-center">
-            <img src="assets/Asset-system/pngwing.png"alt="patern">
+            <img src="assets/Asset-system/pngwing.com.png"alt="patern" loading="lazy">
          </div>
             <div class="container">
               <div class="Advantages">
@@ -548,7 +548,7 @@
              
             </div>
             <div class="pattern pattern-bootom">
-              <img src="assets/Asset-system/pngwing.png"alt="patern" loading="lazy">
+              <img src="assets/Asset-system/pngwing.com.png"alt="patern" loading="lazy">
            </div>
           </div>
           
