--- a/prices.html
+++ b/prices.html
@@ -110,11 +110,11 @@
           <h1 class="page-title">  الاسعار</h1>
       </div>
      </section>
-     <section class="component-prices pt-5 pb-5">
+     <section class="component-prices pt-5 pb-5 aos-init aos-animate" data-aos-delay="30" data-aos="fade-up">
        <div class="container">
          <div class="row mx-0 row-cols-lg-3 g-4 row-cols-md-2 row-cols-1">
-            <div class="col col-peicess">
-              <div class="price_box_inner p-md-4 p-2 h-100">
+            <div class="col col-peicess" >
+              <div class="price_box_inner p-md-4 p-2 h-100 " >
                 <div class="nk-pricing-head pb-2 text-center">
                   <h2 class="pt-3 fs-4">الباقة الشاملة</h2>
                   <h3 class="price-component fs-5 mt-4">
