--- a/prices.html
+++ b/prices.html
@@ -19,15 +19,16 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="./assets/font/font-awesome/css/all.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="./assets/css/style-system.css" rel="stylesheet"><!--لينك خاص بالتصميم الجديد-->
 
     <link href="./assets/css/style-en.css" rel="stylesheet">
+    <link href="./assets/css/style-system.css" rel="stylesheet"><!--لينك خاص بالتصميم الجديد-->
+
 </head>
 <body>
      <!-------------------------start-loading-pag------------------------->
      <div class="component-stert">
           <div class="component--intro status--loaded">
-              <img src="./assets/img/logoar.webp" alt="logo">
+              <img src="./assets/img/logoar.webp" alt="logo" loading="lazy">
           </div>
       </div>
       <!---------------------------end-loading-pag------------------------->
@@ -64,14 +65,13 @@
                 البرامج
               </a>
               <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="Programs-Asset-system-tow.html">    برنامج ادارة الاصول  والصيانة</a></li>
+
                 <li><a class="dropdown-item" href="Programs-Accounting.html"> برنامج المحاسبة</a></li>
                 <li><a class="dropdown-item" href="Programs-stores.html">  برنامج ادارة المخازن </a></li>
                 <li><a class="dropdown-item" href="Programs-delegates.html">  برنامج ادارة المناديب  </a></li>
-                <li><a class="dropdown-item" href="Programs-Personnel.html">  برنامج ادارة الموارد البشرية  </a></li>
-                <li><a class="dropdown-item" href="Programs-pos.html">  برنامج   نقاط البيعpos  </a></li>
-                <li><a class="dropdown-item" href="Programs-Other.html">     برامج اخرى  </a></li>
-                <li><a class="dropdown-item" href="Programs-Asset-system-tow.html">    برنامج ادارة الاصول </a></li>
-
+                <li><a class="dropdown-item" href="Programs-Personnel.html">  برنامج ادارة   المحطات  </a></li>
+             
               </ul>
             </li>
             <li class="nav-item">
